--- a/cloud.html
+++ b/cloud.html
@@ -5,9 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
-    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <title>Cloud</title>
+
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
@@ -49,11 +48,11 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
-                                <li><a href="cloud.html">Cloud</a></li>
+                                <li class="active"><a href="cloud.html">Cloud</a></li>
                             </ul>
                         </li>
                         <li>
@@ -86,7 +85,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>The Cloud</h1>
                     </div>
                 </div>
             </div>
@@ -101,15 +100,51 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>Cloud</h3>
+
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
+                                <h2>Cloud</h2>
+                                <p>The lecture on Cloud computing explained what exactly is the cloud and its benefits.</p>
+                                <ul>
+                                    <h4>Why Cloud?</h4>
+                                    <li>You had to buy a stack of servers before if you wanted to host a website.</li>
+                                    <li>When you had high traffic you needed more servers.</li>
+                                    <li>These servers needed a lot of maintainence.</li>
+                                    <li>They were also high cost.</li>
+                                    <li>Troubleshooting problems are tedious and may conflict with your business goals.</li>
+                                    <li>Amount of data is huge and that is why the cloud became important.</li>
+                                    <li>The reason for the cloud is because we do everything online, bookings, music, files, ebooks, podcasts, etc.</li>
+                                    <li>Cloud computing is a place to store data on remote servers.</li>
+                                    <h4>Service Models</h4>
+                                    <li>SaaS is software as a service, like Gmail.</li>
+                                    <li>PaaS is platform as a service, like the google app engine. You can create your own applications on their platform.</li>
+                                    <li>IaaS is infrastructure as a service, provides virtualized computing resources over the internet, abstract the user from the physical machine.</li>
+
+                                    <h4>Deployment Models</h4>
+                                    <li>Public cloud is available to everyone.</li>
+                                    <li>Easy and inexpensive setup, hardware, application and bandwith costs are covered by the provider.</li>
+                                    <li>No wasted resources because you pay for what you use.</li>
+                                    <li>Private clouds offer hosted services to a limited number of people behind firewall, so it minimizes the security concerns.</li>
+                                    <li>Private cloud gives companies control over their data.</li>
+                                    <li>Hybrid cloud is a combination of private and public cloud.</li>
+                                    <li>It helps to access the best of both worlds.</li>
+                                    <h4>Cloud Providers</h4>
+                                    <li>Google cloud platform</li>
+                                    <li>Digital Ocean</li>
+                                    <li>IBM Cloud</li>
+                                    <li>Amazon Web Services</li>
+                                    <li>Microsoft Azure</li>
+                                    <li>terremark</li>
+                                    <li>Amazon Web Services is the largest cloud provider, it has flexible pricing</li>
+                                    <li>Amazon started before other companies</li>
+                                    <li>Google is one of the cheapest providers in the market</li>
+                                    <li>Netflix uses Amazon Web Services(AWS)</li>
+                                    <li>AWS allos for a free tier</li>
+
+                                </ul>
 
                             </div>
                         </div>
@@ -131,25 +166,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
