--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CIT-82</title>
-    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <meta name="description" content="CIT-82">
+
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
@@ -90,7 +90,7 @@
 
         <section>
             <ul class="slides">
-                <li style="background-image: url(img/oab.jpg)" class="overlay">
+                <li style="background-image: url(img/libraryfcc.jpg)" class="overlay">
                     <div class="jumbotron">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
