--- a/seo.html
+++ b/seo.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
+    <title>SEO</title>
     <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
@@ -108,14 +108,26 @@
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
                                 <h2></h2>
-                                <p>In the lecture about SEO, we learned that SEO means Search Engine Optimization and the first thing you need is a title make sure keywords are readable Second thing important is description Third thing is url Description
-                                    helps compel people to click your site Higher click through rates help you bump up Meta data is data behind the data H1 tag should be applied to title Only want one H1 tag all other tags are ok to have more than 1 Structure
-                                    content to show google what is the most relevent content search engine spider is a bot that was created by google it crawls through your pages and reads everything and follows links it checks for important key words
-                                    based on your h tags pinterest image you make the file name and alt text with keywords google likes multimedia posts keywords in the content look at what google says are the main keywords through the search engine look
-                                    at bottom of seach and you can see the words google is looking for bold keywords or italics to promote keywords video is good for seo it shows google that this content is made with reseach dont want to over optimize
-                                    google will know that you are just flooding for keywords look for 12 to 20 words that are similar to what you are trying to say twitter, pinterest, quora creates back links to your site google likes content that is
-                                    so good that it creates links to it video files work best when keyword is the filename dont duplicate content algorithims can be taken out by google</p>
-
+                                <p>In the lecture about SEO we learned why SEO is important and what it does to pages and different strategies to implement good SEO.</p>
+                                <ul>
+                                    <li>First thing you need is a title</li>
+                                    <li>Need to make sure keywords are readable</li>
+                                    <li>Second thing that is important is description</li>
+                                    <li>Third important thing is your url</li>
+                                    <li>Good descriptions helps compel people to click on your site</li>
+                                    <li>Metadata is data behind the data</li>
+                                    <li>H1 tag should be applied to title</li>
+                                    <li>Only want one H1 tag</li>
+                                    <li>Structure content to show google what is the most relevent content</li>
+                                    <li>Search engine spider is a bot created by google</li>
+                                    <li>Bot crawls through your pages and reads everything and follows links</li>
+                                    <li>Bot checks for important keywords in your H tags</li>
+                                    <li>Google likes multimedia posts</li>
+                                    <li>Keywords in content</li>
+                                    <li>Bold keywords and italics promote keywords</li>
+                                    <li>Don't over optimize your page Google will catch on</li>
+                                    <li>Twitter, Pinterest, Quora creates back links to your site</li>
+                                </ul>
 
                             </div>
                         </div>
@@ -137,25 +149,13 @@
         <footer class="probootstrap-footer probootstrap-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-8">
                         <div class="probootstrap-footer-widget">
-                            <h3>About The School</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro provident suscipit natus a cupiditate ab minus illum quaerat maxime inventore Ea consequatur consectetur hic provident dolor ab aliquam eveniet alias</p>
+                            <h3>About The Course</h3>
+                            <p>CIT-82, Web Technologies, is taught by Rio Waller at Fresno City College. It is an online course that is 9 weeks long.</p>
+                        </div>
+                    </div>
 
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-md-push-1">
-                        <div class="probootstrap-footer-widget">
-                            <h3>Links</h3>
-                            <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Courses</a></li>
-                                <li><a href="#">Teachers</a></li>
-                                <li><a href="#">News</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     <div class="col-md-4">
                         <div class="probootstrap-footer-widget">
                             <h3>Contact Info</h3>
