--- a/http.html
+++ b/http.html
@@ -5,9 +5,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT-82</title>
-    <meta name="description" content="Free Bootstrap Theme by ProBootstrap.com">
-    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    <title>HTTP</title>
+
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
@@ -49,7 +48,7 @@
                         <li>
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Lectures</a>
                             <ul class="dropdown-menu">
-                                <li class="active"><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
+                                <li><a href="htmlcrashcourse.html">HTML Crash Course</a></li>
                                 <li><a href="css.html">CSS</a></li>
                                 <li><a href="bootstrap.html">Bootstrap</a></li>
                                 <li><a href="seo.html">SEO</a></li>
@@ -60,7 +59,7 @@
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Hands On</a>
                             <ul class="dropdown-menu">
                                 <li><a href="markdown.html">Markdown</a></li>
-                                <li><a href="http.html">HTTP</a></li>
+                                <li class="active"><a href="http.html">HTTP</a></li>
                                 <li><a href="github.html">Github</a></li>
                                 <li><a href="editors.html">Editors</a></li>
                                 <li><a href="onlineimage.html">Online Image Compression</a></li>
@@ -86,7 +85,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
-                        <h1>CSS Crash Course</h1>
+                        <h1>HTTP</h1>
                     </div>
                 </div>
             </div>
@@ -101,16 +100,17 @@
                         <div class="row probootstrap-gutter0">
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                                    <h3>CSS Crash Course</h3>
-                                    <p>By Brad Traversy</p>
-                                    <iframe width="260" height="215" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <h3>HTTP</h3>
+                                    <button class="btn btn-ghost" a src="https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview" target="_blank">More Information on HTTP</button>
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                                <h2>CSS Crash Course</h2>
-                                <p>For the CSS portion of the course we watched another good tutorial by Brad Traversy. In this video similar to the HTML video, Brad lays out another sort of cheat sheet to help us reference ii if we ever need to.</p>
-                                <p>I felt that it was a very good tutorial and it had a ton of good information to check back to. It was easy to understand and follow. We finally are able to add some color to our sites. </p>
-
+                                <h2>HTTP</h2>
+                                <p>For our Hands On assignment on HTTP we used the inspect option and brough up the Chrome Developer Tools to look at the network option.</p>
+                                <p>I chose the nba.com and fifa.com sites to look at. What I found was that nba.com 4.1mg to fifas 628k transferred. It is a cool feature that shows you the innerworkings of the site.</p>
+                                <p>HTTP is the protocol that allows the exchange of data from the client side to the server. So when you enter a website, you send the information to the server and it sends the data back to the browser and arranges it according
+                                    to how its programmed.</p>
                             </div>
                         </div>
                     </div>
