--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/vendor/icomoon.css">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -22,12 +23,7 @@
 
 <body>
 
-    <div class="probootstrap-search" id="probootstrap-search">
-        <a href="#" class="probootstrap-close js-probootstrap-close"><i class="icon-cross"></i></a>
-        <form action="#">
-            <input type="search" name="s" id="search" placeholder="Search a keyword and hit enter...">
-        </form>
-    </div>
+
 
     <div class="probootstrap-page-wrapper">
         <!-- Fixed navbar -->
