--- a/markdown.html
+++ b/markdown.html
@@ -80,7 +80,7 @@
             </div>
         </nav>
 
-        <section class="markdownSection">
+        <section class="probootstrap-section probootstrap-section-colored">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-left section-heading probootstrap-animate">
@@ -100,7 +100,8 @@
                             <div class="col-md-4" id="probootstrap-sidebar">
                                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
                                     <h3>Markdown</h3>
-                                    <a href="https://www.markdownguide.org/cheat-sheet/" target="_blank">Markdown Cheat Sheet</a>
+                                    <button class="btn btn-ghost"> <a href="https://www.markdownguide.org/cheat-sheet/" target="_blank">Markdown Cheat Sheet</a></button>
+
                                 </div>
                             </div>
                             <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
